# shelfmark

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.bypass-test.yml  docker-compose.dev.yml  docker-compose.test-clients.yml  entrypoint.sh  pyproject.toml  readme.md  requirements-base.txt  requirements-shelfmark.txt  tor.sh
.github/workflows/: build-and-publish-docker-image.yml  ci.yml  codeql.yml
compose/: docker-compose.tor.yml
docs/: configuration.md  custom-scripts.md  environment-variables.md  oidc.md  reverse-proxy.md  url-search-parameters.md  users-and-requests.md
scripts/: bypasser_permission_lab.sh  generate_env_docs.py
shelfmark/: main.py
shelfmark/api/: websocket.py
shelfmark/bypass/: __init__.py  external_bypasser.py  fingerprint.py  internal_bypasser.py
shelfmark/config/: booklore_settings.py  download_settings_handlers.py  email_settings.py  env.py  migrations.py  notifications_settings.py  security.py  security_handlers.py  settings.py  users_settings.py
shelfmark/core/: activity_routes.py  activity_service.py  activity_view_state_service.py  admin_routes.py  admin_settings_routes.py  auth_modes.py  cache.py  config.py  download_history_service.py  external_user_linking.py  image_cache.py  logger.py  models.py  naming.py  notifications.py  oidc_routes.py  onboarding.py  path_mappings.py  prefix_middleware.py  queue.py  request_helpers.py  request_routes.py  requests_service.py  search_plan.py  self_user_routes.py  settings_registry.py  user_db.py  user_settings_overrides.py  utils.py
shelfmark/download/: archive.py  fs.py  http.py  network.py  orchestrator.py  permissions_debug.py  staging.py
shelfmark/download/clients/: __init__.py  base_handler.py  deluge.py  nzbget.py  qbittorrent.py  rtorrent.py  sabnzbd.py  settings.py  torrent_utils.py  transmission.py
shelfmark/download/outputs/: __init__.py  booklore.py  email.py  folder.py
shelfmark/download/postprocess/: custom_script.py  destination.py  pipeline.py  policy.py  prepare.py  router.py  scan.py  steps.py  transfer.py  types.py  workspace.py
shelfmark/metadata_providers/: __init__.py  audible.py  googlebooks.py  hardcover.py  openlibrary.py
shelfmark/release_sources/: __init__.py  direct_download.py
shelfmark/release_sources/audiobookbay/: __init__.py  handler.py  scraper.py  settings.py  source.py  utils.py
shelfmark/release_sources/irc/: client.py  connection_manager.py  source.py
shelfmark/release_sources/newznab/: __init__.py  api.py  cache.py  handler.py  settings.py  source.py
shelfmark/release_sources/prowlarr/: api.py  handler.py  settings.py  source.py  torznab.py
shelfmark/release_sources/prowlarr/clients/: qbittorrent.py  torrent_utils.py  transmission.py
src/: README.md
src/frontend/: .oxfmtrc.json  .oxlintrc.json  index.html  knip.jsonc  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json  vite.config.ts
src/frontend/public/: theme-init.js
src/frontend/src/: App.tsx  main.tsx  styles.css
src/frontend/src/components/: AdvancedFilters.tsx  BookActionButton.tsx  BookDownloadButton.tsx  BookGetButton.tsx  BookTargetDropdown.tsx  DetailsModal.tsx  (+21 more)
tests/audiobookbay/: __init__.py  test_handler.py  test_scraper.py  test_source.py  test_utils.py
tests/bypass/: test_internal_bypasser.py
tests/config/: test_dns_settings_live_apply.py  test_download_settings.py  test_entrypoint_permissions.py  test_generate_env_docs.py  test_mirror_settings_live_apply.py  test_security.py  test_security_handlers.py  test_tor_script_rules.py  test_users_settings.py
tests/core/: test_activity_routes_api.py  test_activity_service.py  test_admin_users_api.py  test_booklore_multiuser.py  test_booklore_upload.py  test_cover_proxy_api.py  test_download_api_guardrails.py  test_download_history_service.py  test_download_processing.py  test_hardlink.py  test_image_cache.py  test_naming.py  test_notifications.py  test_oidc_auth.py  test_oidc_routes.py  test_original_name_template_variable.py  test_per_user_downloads.py  test_primary_title_template_variable.py  test_processing_integration.py  test_request_routes_api.py  test_requests_service.py  test_self_user_routes.py  test_utils.py
tests/download/: test_archive_extraction.py  test_fs_run_blocking_io.py  test_http_aa_redirects.py  test_http_bypasser_fallbacks.py  test_orchestrator_retry.py  test_orchestrator_status.py  test_orchestrator_user_output_mode.py  test_postprocess_scan_blocking_io.py  test_ssl_verify.py
tests/e2e/: test_auth_endpoints.py  test_proxy_auth_middleware.py
tests/irc/: test_connection_manager.py
tests/metadata/: test_googlebooks_parse.py  test_hardcover_lists.py
tests/newznab/: conftest.py  test_api.py  test_cache.py  test_handler.py  test_source.py
tests/prowlarr/: test_client_settings_ssl_verify.py  test_deluge_client.py  test_failure_scenarios.py  test_handler.py  test_integration_handler.py  test_nzbget_client.py  test_qbittorrent_client.py  test_rtorrent_client.py  test_sabnzbd_client.py  test_source.py  test_torrent_utils.py  test_torznab.py  test_transmission_client.py
(+160 files in other folders)
